re PR c++/27227 (rejects valid code with some extern "C")

PR c++/27227
	* decl.c (decls_match): Allow an extern "C" variable declarations
	from different namespaces to match.
	(duplicate_decls): Disallow redeclaring a variable with a
	different linkage specification.
	PR c++/27227
	* g++.dg/lookup/linkage1.C: New test.
	* g++.dg/lookup/linkage2.C: Likewise.

From-SVN: r114647